--- a/frontend/src/styles/pages/homepage.scss
+++ b/frontend/src/styles/pages/homepage.scss
@@ -33,6 +33,21 @@ $gutter: 16px;
     margin: 30px calc(100% / 12);
   }
 
+  .help-center {
+    background-color: variables.$yellow;
+    padding: 15px;
+    ul {
+      list-style: none;
+      a{
+        color: variables.$black;
+        text-decoration: none;
+        &:visited{
+          color: variables.$black;;
+        }
+      }
+    }
+  }
+
   @media only screen and (max-width: 800px) {
     .search-bar {
       margin: 0 $gutter;
