--- a/frontend/src/styles/pages/homepage.scss
+++ b/frontend/src/styles/pages/homepage.scss
@@ -6,9 +6,9 @@ $gutter: 16px;
 
 .homepage {
   .search-bar {
-    margin: 0 calc(100% / 12 - $searchBarPadding);
+    margin: 0 calc(100vw / 12 - $searchBarPadding);
     padding: $searchBarPadding;
-    width: calc(100% * 10 / 12);
+    width: calc(100vw * 10 / 12);
     text-align: center;
     background-color: variables.$grey;
 
@@ -17,7 +17,7 @@ $gutter: 16px;
       border-radius: 12px;
       border: 1px solid variables.$red !important;
       padding: 5px;
-      width: calc(100% * 4 / 12);
+      width: calc(100vw * 4 / 12);
       &:focus {
         outline: none;
       }
@@ -30,7 +30,7 @@ $gutter: 16px;
   }
 
   .homepage-heading {
-    margin: 30px calc(100% / 12);
+    margin: 30px calc(100vw / 12);
   }
 
   .help-center {
@@ -51,10 +51,10 @@ $gutter: 16px;
   @media only screen and (max-width: 800px) {
     .search-bar {
       margin: 0 $gutter;
-      width: calc(100% - 2 * $gutter);
+      width: calc(100vw - 2 * $gutter);
 
       input {
-        width: calc(100% * 3 / 5);
+        width: calc(100vw * 3 / 5);
       }
     }
   }
